# atmcorr

./: .gitattributes  .gitignore  .travis.yml  Dockerfile.environment  Dockerfile.testing  MANIFEST.in  README.html  README.md  README.txt  __init__.py  atmCorr6S.py  atmCorrection_algorithm.py  atmCorrection_plugin.py  atmCorrection_provider.py  atmParametersMODIS.py  atmProcessing.py  atmospheric_correction.py  atmospheric_correction_dialog.py  atmospheric_correction_dialog_base.ui  batchLandsatAtmosphericCorrection6S.py  bathyUtilities.py  environment.yml  install_or_update.bat  metadata.txt  pyproject.toml  read_satellite_metadata.py  requirements.txt  requirements_cli.txt  resources.py  resources.qrc  setup.cfg  setup.py  test_Atm_corr.py  versioneer.py
atmcorr/: _version.py  adjacency_correction.py  exception_handling.py  logs.py  processing.py  resampling.py  response_curves.py  sensors.py  tiling.py  viewing_geometry.py  wrap_6S.py
atmcorr/landsat8/: __init__.py  geometry.py  metadata.py  radiance.py  reflectance.py  unzip.py  utils.py
atmcorr/metadata/: __init__.py  pleiades.py  pneo.py  sentinel2.py  worldview.py
atmcorr/pleiades/: calibration.py  metadata.py  radiance.py
atmcorr/radiance/: __init__.py  (+5 more)
atmospheric_correction/: atmCorr6S.py  atmParametersMODIS.py  atmProcessing.py  band_filters.py  bathyUtilities.py  dos.py  io_utils.py  logs.py  modis_params.py  processing.py  read_satellite_metadata.py  sensors.py  tiling.py  utils.py  viewing_geometry.py  wrap_6S.py
dependency/: sixsV1.1
legacy_code/: read_landsat.py
tests/: test_tiling.py
(+105 files in other folders)
