[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "atmcorr"
authors = [
    {name = "Jonas Sølvsteen"},
    {name = "Pantelis Kouris"},
    {name = "Nicklas Simonsen", email = "nisi@dhigroup.com"},
]
description = "Atmospheric correction using Py6S"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "geospatial", "geographic", "raster", "vector", 
    "remote sensing", "bathymetry",
]

license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pyproj",
    "numpy<=1.24.0",
    "pandas",
    "rasterio",
    "shapely",
    "scipy>=1.7.0",
    "tqdm",
    "lxml",
    "satmeta @ git+https://github.com/DHI-GRAS/satmeta.git",
]
dynamic = ["version"]